--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         .bg-celebs { background: linear-gradient(135deg, #f59e0b, #d97706); }
         .bg-school { background: linear-gradient(135deg, #0ea5e9, #6366f1); }
         .bg-home { background: linear-gradient(135deg, #f97316, #e11d48); }
+        .bg-music { background: linear-gradient(135deg, #ec4899, #8b5cf6); }
+        .bg-lyrics { background: linear-gradient(135deg, #34d399, #3b82f6); }
 
         /* 動畫效果 */
         .intro-logo { animation: introLogoFade 1.8s cubic-bezier(0.22, 1, 0.36, 1) forwards; }
@@ -122,7 +124,7 @@
                     class="w-full h-2 bg-slate-700 rounded-lg appearance-none cursor-pointer accent-indigo-400">
             </div>
             
-            <div class="version-tag">TOTAL 770 WORDS | V1.0.2</div>
+            <div class="version-tag">TOTAL 910 WORDS | V1.3.0</div>
         </div>
 
         <!-- 2. 準備畫面 -->
@@ -143,7 +145,7 @@
             </div>
 
             <div class="flex-grow flex items-center justify-center pointer-events-none px-6">
-                <div id="word-display" class="text-6xl md:text-8xl font-black text-center word-bounce drop-shadow-2xl">載入中</div>
+                <div id="word-display" class="text-5xl md:text-7xl font-black text-center word-bounce drop-shadow-2xl px-4">載入中</div>
             </div>
 
             <div class="p-10 flex justify-center">
@@ -185,6 +187,24 @@
     <script>
         const categoryData = [
             { 
+                id: "lyrics", name: "經典歌詞", type: "歌詞", bg: "bg-lyrics", 
+                words: [
+                    "我想帶你去浪漫的土耳其", "陪你去看流星雨落在這地球上", "只要你一個眼神肯定我的愛", "簡單點說話的方式簡單點", "你說你公私分明卻又私下關心", "往事不要再提人生已多風雨", "給我一首歌的時間", "我來到你的城市走過你來時的路", "原來你什麼都不想要", "如果這都不算愛", "親愛的愛上你從那天起", "手牽手一步兩步三步四步望著天", "快使用雙截棍哼哼哈嘻", "聽媽媽的話別讓她受傷", "天黑黑欲落雨", "你存在我深深的腦海裡", "我的心太亂要一些空白", "那些年錯過的大雨", "刻在我心底的名字", "醜八怪呀呀呀", "如果可以我想和你回到那天", "一場遊戲一場夢", "我難過的是放棄你放棄愛", "聽見下雨的聲音", "說好不哭", "可惜不是你陪我到最後", "你要的愛不只是依賴", "對不起這條路我走不到終點", "我們背對背擁抱", "給我一個理由忘記"
+                ] 
+            },
+            { 
+                id: "music", name: "華語金典", type: "影音", bg: "bg-music", 
+                words: [
+                    "七里香", "聽媽媽的話", "告白氣球", "修煉愛情", "年少有為", "小幸運", "那些年", "刻在我心底的名字", "如果可以", "有一種悲傷",
+                    "紅豆", "我願意", "聽海", "我懷念的", "可惜不是你", "情非得已", "明明就", "曹操", "江南", "愛我別走",
+                    "十年", "浮誇", "K歌之王", "簡單愛", "稻香", "挪威的森林", "浪人情歌", "愛如潮水", "吻別", "一場遊戲一場夢",
+                    "童話", "勇氣", "演員", "曖昧", "家後", "海闊天空", "光輝歲月", "三天三夜", "姐妹", "BAD BOY",
+                    "志明與春嬌", "離開地球表面", "突然好想你", "派對動物", "聽見下雨的聲音", "說散就散", "後來", "盛夏光年", "逆光", "小情歌",
+                    "你就不要想起我", "魔鬼中的天使", "體面", "涼涼", "千里之外", "青花瓷", "雙截棍", "牛仔很忙", "屋頂", "煙花易冷",
+                    "愛情轉移", "洋蔥", "泡沫", "孤勇者", "想見你想見你想見你", "魚仔", "浪子回頭", "倒帶", "說好的幸福呢", "安靜"
+                ] 
+            },
+            { 
                 id: "school", name: "校園生活", type: "校園", bg: "bg-school", 
                 words: [
                     "粉筆", "黑板擦", "自動鉛筆", "立可帶", "圓規", "量角器", "書包", "福利社", "升旗", "大隊接力", 
@@ -223,7 +243,7 @@
             { 
                 id: "celebs", name: "社會名人", type: "社會", bg: "bg-celebs", 
                 words: [
-                    "周杰倫", "蔡依林", "馬斯克", "賈伯斯", "比爾蓋茲", "川普", "歐巴馬", "愛因斯坦", "牛頓", "貝多芬", "莫札特", "畢卡索", "達文西", "泰勒絲", "梅西", "C羅", "大谷翔平", "李小龍", "成龍", "周星馳", "劉德華", "黃仁勳", "戴資穎", "王建民", "陳金鋒", "曾雅妮", "李安", "五月天阿信", "林俊傑", "鄧紫棋", "宮崎駿", "史蒂芬史匹柏", "瑪丹娜", "麥可傑克森", "李奧納多", "湯姆克魯斯", "安潔莉娜裘莉", "歐普拉", "切格瓦拉", "甘地", "馬丁路德金", "居禮夫人", "愛迪生", "貝爾", "萊特兄弟", "馬克吐溫", "莎士比亞", "海明威", "村上春樹", "J.K.羅琳", "費德勒", "納達爾", "柯瑞", "詹姆斯", "喬丹", "伍茲", "舒馬赫", "阿姆斯壯", "哥倫布", "麥哲倫", "拿破崙", "凱撒大帝", "亞歷山大", "林肯", "邱吉爾", "羅斯福", "柴契爾夫人", "曼德拉", "德蕾莎修女", "孔子"
+                    "周杰倫", "蔡依林", "馬斯克", "賈伯斯", "比爾蓋茲", "川普", "歐巴馬", "愛因斯坦", "牛頓", "貝多芬", "莫札特", "畢卡索", "達文西", "泰勒絲", "梅西", "C羅", "大谷翔平", "李小龍", "成龍", "周星馳", "劉德華", "黃仁勳", "戴資穎", "王建民", "陳金鋒", "曾雅妮", "李安", "五月天阿信", "林俊傑", "鄧紫棋", "宮崎駿", "史蒂芬史匹柏", "瑪丹娜", "麥可傑克森", "李奧納多", "湯姆克魯斯", "安潔莉娜裘莉", "歐普拉", "切格瓦拉", "甘地", "馬丁路德金", "居禮夫人", "愛迪生", "貝爾", "萊特兄弟", "馬克吐溫", "莎士比亞", "海明威", "村上春樹", "J.K.羅琳", "費德勒", "納達爾", "柯瑞", "詹姆斯", "喬丹", "伍茲", "舒馬赫", "阿姆斯壯", "哥倫布", "麥哲倫", "拿破崙", "凱撒大帝", "亞歷山大", "林肯", "邱吉爾", "羅斯福", "柴徹爾夫人", "曼德拉", "德蕾莎修女", "孔子"
                 ] 
             },
             { 
@@ -235,7 +255,7 @@
             { 
                 id: "movie", name: "經典電影", type: "影視", bg: "bg-anime", 
                 words: [
-                    "鐵達尼號", "阿凡達", "哈利波特", "復仇者聯盟", "玩命關頭", "獅子王", "冰雪奇緣", "小丑", "奧本海默", "芭比", "捍衛戰士", "寄生上流", "教父", "侏羅紀公園", "星際大戰", "不可能的任務", "駭客任務", "蜘蛛人", "蝙蝠俠", "超人", "神力女超人", "黑豹", "沙丘", "星際效應", "全面啟動", "黑暗騎士", "魔戒", "哈比人", "辛德勒的名單", "刺激1995", "阿甘正傳", "搶救雷恩大兵", "大白鯊", "外星人E.T.", "法櫃奇兵", "回到未來", "魔鬼終結者", "異形", "終極警探", "捍衛任務", "神鬼認證", "神鬼奇航", "神鬼戰士", "惡靈古堡", "沈默的羔羊", "火線追緝令", "頂尖對決", "記憶拼圖", "敦克爾克大行動", "寄生上流", "小丑", "樂來越愛你", "大娛樂家", "一個巨星的誕生", "波希米亞狂想曲", "貓咪收集", "穿著Prada的惡魔", "麻雀變鳳凰", "鐵達尼號", "我就要你好好的", "生命中的美好缺憾", "真愛每一天", "戀夏500日", "手札情緣", "鬼店", "大法師", "厲陰宅", "安娜貝爾", "牠", "噤界"
+                    "鐵達尼號", "阿凡達", "哈利波特", "復仇者聯盟", "玩命關頭", "獅子王", "冰雪奇緣", "小丑", "奧本海默", "芭比", "捍衛戰士", "寄生上流", "教父", "侏羅紀公園", "星際大戰", "不可能的任務", "駭客任務", "蜘蛛人", "蝙蝠俠", "超人", "神力女超人", "黑豹", "沙丘", "星際效應", "全面啟動", "黑暗騎士", "魔戒", "哈比人", "辛德勒的名單", "刺激1995", "阿甘正傳", "搶救雷恩大兵", "大白鯊", "外星人E.T.", "法櫃奇兵", "回到未來", "魔鬼終結者", "異形", "終極警探", "捍衛任務", "神鬼認證", "神鬼奇航", "神鬼戰士", "惡靈古堡", "沈默的羔羊", "火線追緝令", "頂尖對決", "記憶拼圖", "敦克爾克大行動", "樂來越愛你", "大娛樂家", "一個巨星的誕生", "波希米亞狂想曲", "穿著Prada的惡魔", "麻雀變鳳凰", "我就要你好好的", "生命中的美好缺憾", "真愛每一天", "戀夏500日", "手札情緣", "鬼店", "大法師", "厲陰宅", "安娜貝爾", "牠", "噤界"
                 ] 
             },
             { 
@@ -371,8 +391,8 @@
                 document.getElementById('result-comment').innerText = comment;
                 document.getElementById('review-list').innerHTML = gameState.history.map((h, i) => `
                     <li class="flex justify-between items-center p-4 bg-white/5 rounded-2xl border border-white/5 stagger-item" style="animation-delay: ${i * 0.05}s">
-                        <span class="${h.correct ? 'text-white' : 'text-slate-500'} font-black text-lg">${h.word}</span>
-                        <span class="text-xl">${h.correct ? '✅' : '❌'}</span>
+                        <span class="${h.correct ? 'text-white' : 'text-slate-500'} font-black text-lg text-left pr-4">${h.word}</span>
+                        <span class="text-xl shrink-0">${h.correct ? '✅' : '❌'}</span>
                     </li>
                 `).join('');
             }
