--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!DOCTYPE html>
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
@@ -28,6 +28,9 @@
         .bg-home { background: linear-gradient(135deg, #f97316, #e11d48); }
         .bg-music { background: linear-gradient(135deg, #ec4899, #8b5cf6); }
         .bg-lyrics { background: linear-gradient(135deg, #34d399, #3b82f6); }
+        .bg-2000s { background: linear-gradient(135deg, #0ea5e9, #2563eb); }
+        .bg-history { background: linear-gradient(135deg, #475569, #1e293b); }
+        .bg-events2025 { background: linear-gradient(135deg, #ef4444, #f97316); }
 
         /* 動畫效果 */
         .intro-logo { animation: introLogoFade 1.8s cubic-bezier(0.22, 1, 0.36, 1) forwards; }
@@ -124,7 +127,7 @@
                     class="w-full h-2 bg-slate-700 rounded-lg appearance-none cursor-pointer accent-indigo-400">
             </div>
             
-            <div class="version-tag">TOTAL 910 WORDS | V1.3.0</div>
+            <div class="version-tag">TOTAL 1100 WORDS | V1.7.0</div>
         </div>
 
         <!-- 2. 準備畫面 -->
@@ -145,7 +148,7 @@
             </div>
 
             <div class="flex-grow flex items-center justify-center pointer-events-none px-6">
-                <div id="word-display" class="text-5xl md:text-7xl font-black text-center word-bounce drop-shadow-2xl px-4">載入中</div>
+                <div id="word-display" class="text-4xl md:text-6xl font-black text-center word-bounce drop-shadow-2xl px-4">載入中</div>
             </div>
 
             <div class="p-10 flex justify-center">
@@ -187,9 +190,27 @@
     <script>
         const categoryData = [
             { 
+                id: "events2025", name: "2025年度大事", type: "時事", bg: "bg-events2025", 
+                words: [
+                    "川普就任美國總統", "大語言模型推理突破", "2025世界壯年運動會", "台灣碳費正式開徵", "台北捷運信義線東延段", "世界博覽會大阪萬博", "AI 機器人普及化", "生成式影片大爆發", "火星登陸計劃推進", "極端氣候熱浪", "低軌衛星全球覆蓋", "台積電2奈米量產", "台灣高鐵南延屏東動工", "黃仁勳來台演講", "元宇宙社交再現", "數位貨幣全面合規", "量子電腦商業應用", "台灣基本工資調漲", "星艦第五次試飛成功", "日圓匯率劇烈波動", "全球半導體競爭", "2025 NBA 總決賽", "大巨蛋演唱會熱潮", "台灣交通新制上路", "無人機外送服務", "巴黎協定氣候目標審視", "東南亞旅遊熱潮", "台灣 6G 技術實驗"
+                ] 
+            },
+            { 
+                id: "2000s", name: "2000年金曲", type: "經典", bg: "bg-2000s", 
+                words: [
+                    "龍捲風", "可愛女人", "雙截棍", "簡單愛", "開不了口", "安靜", "回到過去", "半島鐵盒", "晴天", "七里香", "看我72變", "說愛你", "倒帶", "布拉格廣場", "愛情三十六計", "天黑黑", "開始懂了", "風箏", "我不難過", "綠光", "戀人未滿", "美麗新世界", "Super Star", "波斯貓", "江南", "豆漿油條", "一千年以後", "曹操", "溫柔", "憨人", "終結孤單", "人生海海", "倔強", "戀愛ing", "十年", "K歌之王", "你的背包", "勇氣", "分手快樂", "寧夏", "曖昧", "雨後曙光", "倒數", "愛如潮水", "暗號", "以父之名", "布拉格廣場", "東風破", "聽媽媽的話", "千里之外", "說好的幸福呢", "那女孩對我說", "童話", "第一次", "約定", "遺失的美好", "歐若拉", "隱形的翅膀", "不想長大", "中國話", "暗示", "那些年", "小幸運", "知足", "垃圾車", "私奔到月球", "突然好想你"
+                ] 
+            },
+            { 
+                id: "history", name: "歷史大事件", type: "歷史", bg: "bg-history", 
+                words: [
+                    "秦始皇統一六國", "大航海時代", "工業革命", "法國大革命", "第一次世界大戰", "第二次世界大戰", "登陸月球", "鐵達尼號沉沒", "冷戰結束", "柏林圍牆倒塌", "文藝復興", "黑死病爆發", "美國獨立戰爭", "諾曼第登陸", "珍珠港事件", "廣島投下原子彈", "馬丁路德宗教改革", "玄武門之變", "安史之亂", "十字軍東征", "蒙古西征", "哥倫布發現新大陸", "九一一事件", "武昌起義", "赤壁之戰", "三國鼎立", "貞觀之治", "萬里長城動工", "英法百年戰爭", "滑鐵盧之役", "蘇聯解體", "發明網際網路", "第一次工業革命", "發明電燈", "萊特兄弟飛機首航", "大蕭條", "馬雅文明消失", "古羅馬城建立", "亞歷山大東征", "金字塔建造"
+                ] 
+            },
+            { 
                 id: "lyrics", name: "經典歌詞", type: "歌詞", bg: "bg-lyrics", 
                 words: [
-                    "我想帶你去浪漫的土耳其", "陪你去看流星雨落在這地球上", "只要你一個眼神肯定我的愛", "簡單點說話的方式簡單點", "你說你公私分明卻又私下關心", "往事不要再提人生已多風雨", "給我一首歌的時間", "我來到你的城市走過你來時的路", "原來你什麼都不想要", "如果這都不算愛", "親愛的愛上你從那天起", "手牽手一步兩步三步四步望著天", "快使用雙截棍哼哼哈嘻", "聽媽媽的話別讓她受傷", "天黑黑欲落雨", "你存在我深深的腦海裡", "我的心太亂要一些空白", "那些年錯過的大雨", "刻在我心底的名字", "醜八怪呀呀呀", "如果可以我想和你回到那天", "一場遊戲一場夢", "我難過的是放棄你放棄愛", "聽見下雨的聲音", "說好不哭", "可惜不是你陪我到最後", "你要的愛不只是依賴", "對不起這條路我走不到終點", "我們背對背擁抱", "給我一個理由忘記"
+                    "我想帶你去浪漫的土耳其", "陪你去看流星雨落在這地球上", "只要你一個眼神肯定我的愛", "簡單點說話的方式簡單點", "你說你公私分明卻又私下關心", "往事不要再提人生已多風雨", "給我一首歌的時間", "我來到你的城市走過你來時的路", "原來你什麼都不想要", "如果這都不算愛", "親愛的愛上你從那天起", "手牽手一步兩步三步四步望著天", "快使用雙截棍哼哼哈係", "聽媽媽的話別讓她受傷", "天黑黑欲落雨", "你存在我深深的腦海裡", "我的心太亂要一些空白", "那些年錯過的大雨", "刻在我心底的名字", "醜八怪呀呀呀", "如果可以我想和你回到那天", "一場遊戲一場夢", "我難過的是放棄你放棄愛", "聽見下雨的聲音", "說好不哭", "可惜不是你陪我到最後", "你要的愛不只是依賴", "對不起這條路我走不到終點", "我們背對背擁抱", "給我一個理由忘記"
                 ] 
             },
             { 
@@ -249,7 +270,7 @@
             { 
                 id: "anime", name: "動漫神作", type: "影視", bg: "bg-anime", 
                 words: [
-                    "航海王", "火影忍者", "名偵探柯南", "進擊的巨人", "鬼滅之刃", "咒術迴戰", "間諜家家酒", "蠟筆小新", "多啦A夢", "櫻桃小丸子", "七龍珠", "排球少年", "灌籃高手", "葬送的芙莉蓮", "我的英雄學院", "鏈鋸人", "黑執事", "美少女戰士", "新世紀福音戰士", "神隱少女", "龍貓", "天空之城", "魔法公主", "霍爾的移動城堡", "紅豬", "風之谷", "幽遊白書", "獵人", "死神 BLEACH", "銀魂", "鋼之鍊金術師", "死亡筆記本", "JoJo的奇妙冒險", "一拳超人", "路人超能100", "藍色監獄", "我推的孩子", "藥師少女的獨語", "迷宮飯", "怪獸8號", "數碼寶貝", "神奇寶貝", "遊戲王", "棋靈王", "網球王子", "黑子的籃球", "飆速宅男", "北斗神拳", "聖鬥士星矢", "城市獵人", "魯邦三世", "機動戰士鋼彈", "超時空要塞", "涼宮春日的憂鬱", "幸運星", "K-ON!輕音部", "魔法少女小圓", "刀劍神域", "Re:從零開始的異世界生活", "關於我轉生變成史萊姆這檔事", "無職轉生", "進擊的巨人", "東京喰種", "寄生獸", "命運石之門", "果然我的青春戀愛喜劇搞錯了", "暗殺教室", "食戟之靈", "工作細胞", "孤獨搖滾!"
+                    "航海王", "火影忍者", "名偵探柯南", "進擊的巨人", "鬼滅之刃", "咒術迴戰", "間擲家家酒", "蠟筆小新", "多啦A夢", "櫻桃小丸子", "七龍珠", "排球少年", "灌籃高手", "葬送的芙莉蓮", "我的英雄學院", "鏈鋸人", "黑執事", "美少女戰士", "新世紀福音戰士", "神隱少女", "龍貓", "天空之城", "魔法公主", "霍爾的移動城堡", "紅豬", "風之谷", "幽遊白書", "獵人", "死神 BLEACH", "銀魂", "鋼之鍊金術師", "死亡筆記本", "JoJo的奇妙冒險", "一拳超人", "路人超能100", "藍色監獄", "我推的孩子", "藥師少女的獨語", "迷宮飯", "怪獸8號", "數碼寶貝", "神奇寶貝", "遊戲王", "棋靈王", "網球王子", "黑子的籃球", "飆速宅男", "北斗神拳", "聖鬥士星矢", "城市獵人", "魯邦三世", "機動戰士鋼彈", "超時空要塞", "涼宮春日的憂鬱", "幸運星", "K-ON!輕音部", "魔法少女小圓", "刀劍神域", "Re:從零開始的異世界生活", "關於我轉生變成史萊姆這檔事", "無職轉生", "東京喰種", "寄生獸", "命運石之門", "果然我的青春戀愛喜劇搞錯了", "暗殺教室", "食戟之靈", "工作細胞", "孤獨搖滾!"
                 ] 
             },
             { 
@@ -273,7 +294,7 @@
             { 
                 id: "idioms", name: "成語大師", type: "硬核", bg: "bg-life", 
                 words: [
-                    "守株待兔", "畫蛇添足", "盲人摸象", "對牛彈琴", "掩耳盜鈴", "拔苗助長", "一箭雙鵰", "井底之蛙", "亡羊補牢", "狐假虎威", "順手牽羊", "雞飛狗跳", "如魚得水", "驚弓之鳥", "走馬看花", "聞雞起舞", "懸樑刺股", "胸有成竹", "名落孫山", "草木皆兵", "破釜沉舟", "背水一戰", "臥薪嘗膽", "完璧歸趙", "負荊請罪", "三顧茅廬", "草船借箭", "指鹿為馬", "四面楚歌", "老馬識途", "班門弄斧", "杯弓蛇影", "如坐針氈", "望梅止渴", "口若懸河", "拋磚引玉", "青梅竹馬", "兩小無猜", "天長地久", "海枯石爛", "一心一意", "三心二意", "五花八門", "七上八下", "九死一生", "十全十美", "百發百中", "千載難逢", "萬無一失", "名不虛傳", "自相矛盾", "杞人憂天", "塞翁失馬", "掩鼻而過", "畫龍點睛", "畫餅充飢", "螳臂擋車", "螳螂捕蟬", "黃雀在後", "老當益壯", "投筆從戎", "刮目相看", "吳下阿蒙", "望其項背", "名列前茅", "一鳴驚人", "一落千丈", "一石二鳥", "一勞永逸", "一見鍾情"
+                    "守株待兔", "畫蛇添足", "盲人摸象", "對牛彈琴", "掩耳盜鈴", "拔苗助長", "一箭雙鵰", "井底之蛙", "亡羊補牢", "狐假虎威", "順手牽羊", "雞飛狗跳", "如魚得水", "驚弓之鳥", "走馬看花", "聞雞起舞", "懸樑刺股", "胸有成竹", "名落孫山", "草木皆兵", "破釜沉舟", "背水一戰", "臥薪嘗膽", "完璧歸趙", "負荊請罪", "三顧茅廬", "草船借箭", "指鹿為馬", "四面楚歌", "老馬識途", "班門弄斧", "杯弓蛇影", "如坐針氈", "望梅止渴", "口若懸河", "拋磚引玉", "青梅竹馬", "兩小無猜", "天長地久", "海枯石爛", "一心一意", "三心二意", "五花八門", "七上八下", "九死一生", "十全十美", "百發百中", "千載難逢", "萬無一失", "名不虛傳", "自相矛盾", "杞人憂天", "塞翁失馬", "掩鼻而過", "畫龍點睛", "畫餅充飢", "螳臂擋車", "螳螂捕蟬", "黃雀在後", "老當益壯", "投筆從戎", "刮目看相", "吳下阿蒙", "望其項背", "名列前茅", "一鳴驚人", "一落千丈", "一石二鳥", "一勞永逸", "一見鍾情"
                 ] 
             },
             { 
